# minifier

./: ChangeLog.md  minifier.cabal  minimizer.cabal  test.js
src/: Minifier.hs  MinifyParser.hs  MinimizeParser.hs  Minimizer.hs  Parser.hs
