cabal-version: 1.12

name:           minifier
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Matthiti/minifier#readme>
homepage:       https://github.com/Matthiti/minifier#readme
bug-reports:    https://github.com/Matthiti/minifier/issues
author:         Matthijs Roelink
maintainer:     matthijs@roelink.eu
copyright:      2020 Matthijs Roelink
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Matthiti/minifier

library
  exposed-modules:
      Lib
  other-modules:
      Paths_minifier
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      parsec
  default-language: Haskell2010

executable minifier-exe
  main-is: Main.hs
  other-modules:
      Paths_minifier
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , minifier
  default-language: Haskell2010

test-suite minifier-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_minifier
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , minifier
  default-language: Haskell2010
